2008-11-12  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml: [empty_in] added, used in [input_channel]

	* src/core/extlib/enum.mli: fixed documentation of [for_all]

2008-11-11  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/enum.ml: [seq] now applies post-operation rather than pre-operation

2008-11-10  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/uCharParser.ml: [ExtUTF8] opened

	* src/core/extlib.mlpack: [UCharParser] added

	* src/core/extlib/IO.mli: added [autoclose] to [IO]

	* src/core/extlib/innerIO.ml*: added [autoclose] to [IO]

	* Makefile.in: [config.ml] added, now creating [$(DOCDIR)]

	* configure.ac: [config.ml] removed from dependencies

	* build/odoc_generator_batlib.ml: in main, added warning about length

	* config.ml.in: [documentation_root] now built from [@DOCDIR@]

	* configure.ac: [OCAMLPKG_camomile] now substituted

	* configure.ac: [INSTALLATION] added

	* README: added [opt] and [instdoc]

	* Makefile.in: [INSTALLATION] added

	* Makefile.in: [DEST_TOP] now uses the directory of camomile

2008-11-09  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/IO.mli: Documentation added, functions reordered.

	* src/core/extlib/IO.ml: [copy] now uses a default buffer or 4096

	* src/core/extlib/extList.ml: [print_string] reimplemented with [sprintf2]

	* src/core/extlib/extList.ml*: [print_string] renamed [sprint]


2008-11-08  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/IO.ml*: [copy] now accepts an additional argument

	* src/core/_tags: [extlib_threads] added

	* src/libs/camlzip/gZip.ml: [uncompress] now uses [wrap_in]

	* src/core/extlib/IO.ml: [pos_in] now uses [wrap_in]

	* src/core/extlib/IO.mli: [wrap_in] added

	* src/core/extlib/extPervasives.ml*: [print_all], [prerr_all], [foreach] added

	* src/core/extlib/IO.ml*: [close_all] added

	* src/core/extlib/innerIO.ml*: [close_all] added
